수정-index_카테고리

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -79,7 +79,7 @@
     {% comment %} </div> {% endcomment %}
 
   
-    <div class="col-12 col-md-7 col-lg-8">
+    <div class="col-12 col-md-7 col-lg-8 mt-2">
       {% comment %} 내가 쓴 레시피 {% endcomment %}
       <h5>My recipes</h5>
       <table class='table'>
