--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,12 +32,6 @@ nav{
   z-index: 100;
 }
 
-footer {
-  width: 100%;
-  height: 192px;
-  background: var(--subtle-color);
-
-}
 
 :root {
   --main-color: #0097F3;
@@ -118,6 +112,10 @@ main {
 footer {
   /* position: sticky; */
   bottom: 0;
+  width: 100%;
+  height: 192px;
+  background: #F8F9FA;
+
 }
 
 .footer_container {
@@ -125,7 +123,8 @@ footer {
 }
 
 .footer__image-container{
-  height: 70px;
+  height: 100px;
+  margin: 10px;
 }
 
 .footer__image {
